# agent_hub

./: .env  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  ngrok.sh  package.json  pyproject.toml
.github/workflows/: deploy.yml  issue_to_pr.yml  pr_ci_and_review.yml
src/: __init__.py  config.py  main.py  setup_logger.py  ui_streamlit.py
src/agents/: base.py  ci_healer.py  patcher.py  planner.py  repo_scout.py  reviewer.py  test_writer.py
src/cli/: app.py
src/db/: base.py  models.py  repositories.py
src/github/: client.py  models.py  permissions_policy.py
src/internal/: dependencies.py  reviewer_runner.py
src/internal/routers/: installations.py  runs.py  settings.py  ui.py  webhooks.py
src/internal/schemas/: runs.py  settings.py
src/llm/: base.py  openrouter.py
src/llm/prompts/: system.md
src/services/: api_client.py  code_agent_service.py  jobs.py  orchestrator.py  reviewer_service.py  runs_service.py  webhook_service.py
src/tools/: ci_parser.py  diff_ops.py  git_ops.py  guardrails.py
tests/integration/: test_git_ops_fake_repo.py  test_webhook_to_run.py
tests/unit/: test_ci_parser.py  test_diff_ops.py  test_llm_retry_policy.py  test_permissions_policy.py  test_state_machine.py
