[project]
name = "agent-hub"
version = "0.1.0"
description = "Agentic SDLC pipeline with GitHub integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Agent Hub", email = "devnull@example.com" }]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "httpx>=0.26.0",
  "streamlit>=1.33.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.25",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.19.0",
  "arq>=0.25.0",
  "typer>=0.9.0",
]

[project.scripts]
agent = "cli.app:app"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.3.0",
  "black>=24.1.0",
  "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict = true
mypy_path = "src"
plugins = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
